Link to Medium article up front.

--- a/index.html
+++ b/index.html
@@ -64,13 +64,25 @@
 				Q is a quantum circuit simulator,
 				drag-and-drop circuit editor,
 				and powerful JavaScript library
-				that runs right here in your web browser.
+				that runs right here in your 
+				<a href="https://en.wikipedia.org/wiki/Web_browser" target="_blank">web browser</a>.
 				There’s nothing to install and nothing to configure, 
-				so jump right in and experiment!
+				so jump right in and experiment.
+				(Q recently celebrated our one-year anniversary. 
+				You can 
+				<a href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">read all about it here.</a>)
+
+				
+			</p>
+			<p>
 				Here’s your first quantum circuit—a 
-				<a href="https://en.wikipedia.org/wiki/Bell_state" target="_blank">Bell state</a>.	
-				(<a href="tutorials.html#Create_controlled_gates">Here’s how to make one!</a>)
-				Tap and drag the pieces around to get a feel for the Q editor.
+				<a href="https://en.wikipedia.org/wiki/Bell_state" target="_blank">Bell state</a>.
+				It uses
+				<a href="https://en.wikipedia.org/wiki/Quantum_superposition" target="_blank">superposition</a>
+				and <a href="https://en.wikipedia.org/wiki/Quantum_entanglement" target="_blank">entanglement</a>
+				to calculate.
+				(<a href="tutorials.html#Create_controlled_gates">And here’s how to make one yourself.</a>)
+				Tap and drag the tiles around to get a feel for the Q editor.
 				It’s easy to use on both desktop and mobile devices.
 				Made a mistake? Just tap the Undo button.
 			</p>
