Gates primer re-write.

--- a/Q-Circuit.html
+++ b/Q-Circuit.html
@@ -67,6 +67,25 @@
 			</p>
 			<hr>
 			<h3 id="The_sounds_of_circuitry">The sounds of circuitry</h3>
+<!-- 			<p>
+				A quantum computer is just a collection of 
+				<a href="Q-Qubit.html">qubits</a>.
+				These qubits hold values like 
+				<code>1</code>, <code>0</code>, or some value inbetween.
+				A quantum computer 
+				is able calculate things
+				by changing the value of its qubits.
+				We tell the computer exactly how it should change 
+				the value of a qubit
+				by instructing it to apply 
+				<a href="https://en.wikipedia.org/wiki/Quantum_logic_gate" target="_blank">quantum gates</a> 
+				to the qubit
+				in a particular sequence.
+				We can think of this as choreographing a dance;
+				the qubit dances through a sequence of gates 
+				and as it dances through each gate 
+				it will change the style in which it dances.
+			</p> -->
 			<p>
 				Quantum circuits are represented by diagrams similar to
 				<a href="https://en.wikipedia.org/wiki/Staff_(music)" target="_blank">musical staves</a>. 
